--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest~=9.0.2",
+    "pytest-asyncio~=1.3.0",
     "coverage~=7.13.3"
 ]
 
